# galactic-wars

./: Cargo.toml
assets/: my_material.wgsl
assets/fonts/: roboto.kayak_font
assets/models/: ship_mock.glb
board_plugin/: Cargo.toml
board_plugin/src/: board_assets.rs  components.rs  lib.rs
board_plugin/src/systems/: mod.rs  movement.rs  production.rs
camera_plugin/: Cargo.toml
camera_plugin/src/: lib.rs
src/: main.rs  math_util.rs
src/assets/: materials.rs  mod.rs
src/camera/: components.rs  mod.rs  systems.rs
src/game/: layers_util.rs  mod.rs  resources.rs
src/game/components/: board.rs  characteristics.rs  config.rs  interact.rs  mod.rs  players.rs  selection.rs
src/game/resources/: game_obj_res.rs  game_status_res.rs  mod.rs  player_res.rs
src/game/systems/: combat.rs  mod.rs  movement.rs  production.rs  selection.rs
src/game/utils/: layers_util.rs  mod.rs
src/player_mngmt/: mod.rs  resources.rs
src/selection/: components.rs  mod.rs  systems.rs
src/state/: mod.rs
src/ui/: generics.rs  ingame_ui.rs  menu_ui.rs  mod.rs  styles.rs
