[package]
name = "galactic-wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ ]
debug = [ "bevy-inspector-egui" ]

[dependencies]
# bevy = { version = "0.7", features = ["dynamic"]}
bevy = { version = "0.7"} # feature dynamic should be disabled before release.
bevy-inspector-egui = { version = "0.10", optional = true }
bevy_text_mesh = "0.2.0"
bevy_asset_loader = {version = "0.11", features = ["stageless", "progress_tracking"]}
bevy_rapier3d = { version = "0.14.1", features = ["debug-render","simd-stable", "wasm-bindgen"]}
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", rev="e7fc09a00ac7e7e39100e0084b528b117545cbfa", features = ["bevy_renderer"] }
iyes_loopless = { version = "0.6" }
rand = { version = "0.8" }
