[package]
name = "galactic-wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ ]
debug = [ "bevy-inspector-egui" ]

[dependencies]
# bevy = { version = "0.7", features = ["dynamic"]}
bevy = { version = "0.8"} # feature dynamic should be disabled before release.
bevy-inspector-egui = { version = "0.12", optional = true }
bevy_text_mesh = "0.3.0"
bevy_asset_loader = {version = "0.12", features = ["stageless", "progress_tracking"]}
bevy_rapier3d = { version = "0.16.2", features = ["debug-render","simd-stable", "wasm-bindgen"]}
kayak_ui = { git="https://github.com/StarArawn/kayak_ui", rev="108affb36101e0c06fd9a28aa80224323365227d", features = ["bevy_renderer"] }
iyes_loopless = { version = "0.7" }
rand = { version = "0.8" }
